--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -39,11 +39,11 @@
   },
   "adult_advertising": {
     "message": "Publicidad para adultos",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "advertising": {
     "message": "Publicidad",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "alert_ad_block_off": {
     "message": "Bloqueador de anuncios NO. No se bloquearán los anuncios."
@@ -147,12 +147,15 @@
   "are_you_sure_": {
     "message": "¿Seguro?"
   },
+  "are_you_sure_you_want_to_disable_trackers_preview_": {
+    "message": "¿Seguro que quieres desactivar la vista previa de rastreadores?"
+  },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "¿Seguro que quieres omitir la activación de Ghostery?"
   },
   "audio_video_player": {
     "message": "Reproductor de audio/vídeo",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "back": {
     "message": "Atrás"
@@ -547,7 +550,7 @@
   },
   "cdn": {
     "message": "CDN",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
     "message": "Consulta las preguntas frecuentes de <a href=\"$${0}\" target=\"_blank\"> </a> o escríbenos a <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Estaremos encantados de hablar contigo."
@@ -629,7 +632,7 @@
   },
   "comments": {
     "message": "Comentarios",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "confirm_email_colon": {
     "message": "Confirmar correo electrónico:"
@@ -639,7 +642,7 @@
   },
   "consent_management": {
     "message": "Gestión del consentimiento",
-    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+    "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "continue": {
     "message": "Continuar"
@@ -675,13 +678,16 @@
   },
   "customer_interaction": {
     "message": "Interacción con el cliente",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "customize_setup": {
     "message": "Personalizar instalación"
   },
   "detailed_view": {
     "message": "Vista detallada"
+  },
+  "disable": {
+    "message": "Deshabilitar"
   },
   "disable_trackers_preview": {
     "message": "Deshabilitar vista previa de rastreadores"
@@ -700,7 +706,7 @@
   },
   "email": {
     "message": "Correo electrónico",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "email_address_in_use": {
     "message": "Esa dirección de correo electrónico ya está en uso.  Por favor, elige otra. "
@@ -743,14 +749,14 @@
   },
   "essential": {
     "message": "Esencial",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "expand_all": {
     "message": "Expandir todo"
   },
   "extensions": {
     "message": "Extensiones",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "file_was_not_selected": {
     "message": "No se ha seleccionado el archivo"
@@ -797,6 +803,9 @@
   "ghostery_privacy_policy": {
     "message": "Política de privacidad de Ghostery"
   },
+  "ghostery_settings": {
+    "message": "Ajustes de Ghostery"
+  },
   "global_settings_saved": {
     "message": "Ajustes globales guardados"
   },
@@ -817,7 +826,7 @@
   },
   "hosting": {
     "message": "Hosting",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
     "message": "Acepto el envío de información no personal a <a href=\"$${0}\"> WhoTracks.Me de Ghostery </a>, y acepto la política de privacidad de <a href=\"$${1}\"> Ghostery </a> "
@@ -876,9 +885,12 @@
   "license_url": {
     "message": "Url"
   },
+  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
+    "message": "Ten en cuenta que no todas las entidades enumeradas son rastreadoras; es decir, que no todas recopilan datos personales"
+  },
   "miscellaneous": {
     "message": "Miscelánea",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Más información sobre la metodología $${0} en el Manifiesto de Ghostery."
@@ -913,6 +925,9 @@
   },
   "no_thanks_continue_with_basic": {
     "message": "No, gracias, continuar con básico"
+  },
+  "no_trackers_detected": {
+    "message": "No se detectaron rastreadores"
   },
   "none": {
     "description": "Used to say that this item does not belong to any of the groups, as in \"Groups: None\" (as opposed to \"Groups: Group A, Group B, Group C\").",
@@ -1613,7 +1628,7 @@
   },
   "site_analytics": {
     "message": "Estadísticas de sitios",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "skip": {
     "message": "Omitir"
@@ -1623,7 +1638,7 @@
   },
   "social_media": {
     "message": "Redes sociales",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "spring_is_here": {
     "message": "¡Ha llegado la primavera!"
@@ -1662,6 +1677,9 @@
   },
   "subscription_expired": {
     "message": "Cuenta caducada"
+  },
+  "subscription_for_contributors": {
+    "message": "Para los contribuyentes"
   },
   "subscription_inactive": {
     "message": "Inactivo"
@@ -1707,9 +1725,6 @@
   },
   "subscription_upgrade_to": {
     "message": "Conviértete en Contribuyente"
-  },
-  "subscription_for_contributors": {
-    "message": "Para los contribuyentes"
   },
   "summary_alert": {
     "description": "as in '1 ALERT'",
@@ -1770,6 +1785,10 @@
   },
   "system_wide_tracker_and_ad_blocking": {
     "message": "Rastreador y bloqueo de anuncios en todo el sistema"
+  },
+  "telemetry": {
+    "message": "Telemetría",
+    "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "La extensión del navegador Ghostery está instalada en su navegador, pero Ghosty se está echando una siestecita."
@@ -1845,7 +1864,7 @@
   },
   "unknown": {
     "message": "Desconocido",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "welcome_to_ghostery": {
     "message": "Bienvenido a Ghostery"
@@ -1866,6 +1885,9 @@
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, operado por Ghostery, es una parte integral de la tecnología anti-seguimiento de Ghostery. Es un recurso global completo sobre rastreadores, que aporta transparencia al rastreo web."
   },
+  "whotracks_me_statistical_report": {
+    "message": "Informe estadístico de WhoTracks.Me"
+  },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Con Ghostery activado, navegas instantáneamente por la web de forma más segura, más rápida y con menos anuncios molestos."
   },
@@ -1883,6 +1905,9 @@
   },
   "you_re_all_set__ghosterian_": {
     "message": "¡Ya estás a punto, ghosteriniano/a!"
+  },
+  "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
+    "message": "Ya no verás las ruedas de los rastreadores junto a los resultados de búsqueda."
   },
   "your_email_do_not_match": {
     "message": "Tus correos no coinciden."
