--- a/extension-manifest-v2/_locales/hu/messages.json
+++ b/extension-manifest-v2/_locales/hu/messages.json
@@ -39,11 +39,11 @@
   },
   "adult_advertising": {
     "message": "Felnőtt hirdetés",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "advertising": {
     "message": "Hirdetés",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "alert_ad_block_off": {
     "message": "A Hirdetésblokkolás KI van kapcsolva. A hirdetések nincsenek letiltva."
@@ -147,12 +147,15 @@
   "are_you_sure_": {
     "message": "Biztos benne?"
   },
+  "are_you_sure_you_want_to_disable_trackers_preview_": {
+    "message": "Are you sure you want to disable Trackers Preview?"
+  },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Biztos, hogy nem akarja engedélyezni a Ghostery-t?"
   },
   "audio_video_player": {
     "message": "Zene-/filmlejátszó",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "back": {
     "message": "Vissza"
@@ -547,7 +550,7 @@
   },
   "cdn": {
     "message": "CDN",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
     "message": "Tekintse meg a <a href=\"$${0}\" target=\"_blank\">GYIK</a> oldalunkat vagy írjon nekünk e-mail-t: <a href=\"mailto:$${1}\">$${2}</a>. <br/> Örömmel állunk rendelkezésére!"
@@ -629,7 +632,7 @@
   },
   "comments": {
     "message": "Hozzászólások",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "confirm_email_colon": {
     "message": "Emailcím megerősítése:"
@@ -639,7 +642,7 @@
   },
   "consent_management": {
     "message": "Hozzájárulás-kezelés",
-    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+    "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "continue": {
     "message": "Folytatás"
@@ -675,13 +678,16 @@
   },
   "customer_interaction": {
     "message": "Ügyfélkommunikáció",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "customize_setup": {
     "message": "Telepítés személyre szabása"
   },
   "detailed_view": {
     "message": "Részletes nézet"
+  },
+  "disable": {
+    "message": "Disable"
   },
   "disable_trackers_preview": {
     "message": "Nyomonkövetők előnézetének letiltása"
@@ -700,7 +706,7 @@
   },
   "email": {
     "message": "E-mail-cím",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "email_address_in_use": {
     "message": "Az e-mail cím már használatban van. Kérjük, válasszon másik."
@@ -743,14 +749,14 @@
   },
   "essential": {
     "message": "Alapvető",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "expand_all": {
     "message": "Összes kibontása"
   },
   "extensions": {
     "message": "Kiterjesztések",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "file_was_not_selected": {
     "message": "Nincs fájl kiválasztva"
@@ -797,6 +803,9 @@
   "ghostery_privacy_policy": {
     "message": "Ghostery Adatvédelmi Szabályzat"
   },
+  "ghostery_settings": {
+    "message": "Ghostery settings"
+  },
   "global_settings_saved": {
     "message": "Globális beállítások mentve"
   },
@@ -817,7 +826,7 @@
   },
   "hosting": {
     "message": "Hosztolás",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
     "message": "Hozzájárulok, hogy a nem személyes adataimat elküldjék a <a href=\"$${0}\">Ghostery WhoTracks.Me</a> részére, és elfogadom a <a href=\"$${1}\">Ghostery Adatvédelmi Szabályzatát</a>."
@@ -876,9 +885,12 @@
   "license_url": {
     "message": "URL"
   },
+  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
+    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+  },
   "miscellaneous": {
     "message": "Egyéb",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "További információ a $${0} módszertanról a Ghostery kiáltványában található."
@@ -913,6 +925,9 @@
   },
   "no_thanks_continue_with_basic": {
     "message": "Nem, köszönöm, folytassa az alapszinttel"
+  },
+  "no_trackers_detected": {
+    "message": "No trackers detected"
   },
   "none": {
     "description": "Used to say that this item does not belong to any of the groups, as in \"Groups: None\" (as opposed to \"Groups: Group A, Group B, Group C\").",
@@ -1613,7 +1628,7 @@
   },
   "site_analytics": {
     "message": "Webanalitika",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "skip": {
     "message": "Konténer"
@@ -1623,7 +1638,7 @@
   },
   "social_media": {
     "message": "Közösségi média",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "spring_is_here": {
     "message": "Itt a tavasz!"
@@ -1662,6 +1677,9 @@
   },
   "subscription_expired": {
     "message": "Fiók lejárt"
+  },
+  "subscription_for_contributors": {
+    "message": "Adakozók számára"
   },
   "subscription_inactive": {
     "message": "Inaktív"
@@ -1707,9 +1725,6 @@
   },
   "subscription_upgrade_to": {
     "message": "Legyen ön is Adakozó"
-  },
-  "subscription_for_contributors": {
-    "message": "Adakozók számára"
   },
   "summary_alert": {
     "description": "as in '1 ALERT'",
@@ -1770,6 +1785,10 @@
   },
   "system_wide_tracker_and_ad_blocking": {
     "message": "Rendszeres követő és reklámblokkoló szoftver"
+  },
+  "telemetry": {
+    "message": "Telemetria",
+    "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "A Ghostery böngészőbővítmény telepítve van a böngészőjébe, de Ghosty éppen szundikál."
@@ -1845,7 +1864,7 @@
   },
   "unknown": {
     "message": "Ismeretlen",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "welcome_to_ghostery": {
     "message": "Üdvözli Önt a Ghostery"
@@ -1866,6 +1885,9 @@
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "A Ghostery által üzemeltetett WhoTracks.Me a Ghostery mesterséges intelligencia alapú nyomkövetés elleni technológiájának szerves részét képezi. Ez egy átfogó globális adatforrás a nyomonkövetőkről, amely átláthatóvá teszi a webes nyomkövetést."
   },
+  "whotracks_me_statistical_report": {
+    "message": "WhoTracks.Me Statistical Report"
+  },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "A Ghostery engedélyezésével azonnal biztonságosabban, gyorsabban és kevesebb idegesítő hirdetéssel böngészhet a weben."
   },
@@ -1883,6 +1905,9 @@
   },
   "you_re_all_set__ghosterian_": {
     "message": "Minden készen áll, Ghostery-rajongó!"
+  },
+  "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
+    "message": "You will no longer see tracker wheels next to the search results."
   },
   "your_email_do_not_match": {
     "message": "Az emailcímek nem egyeznek."
