--- a/extension-manifest-v2/_locales/nl/messages.json
+++ b/extension-manifest-v2/_locales/nl/messages.json
@@ -39,11 +39,11 @@
   },
   "adult_advertising": {
     "message": "Adult Advertising",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "advertising": {
     "message": "Advertising",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "alert_ad_block_off": {
     "message": "Advertentieblokkering UIT. Advertenties worden niet geblokkeerd."
@@ -147,12 +147,15 @@
   "are_you_sure_": {
     "message": "Weet je het zeker?"
   },
+  "are_you_sure_you_want_to_disable_trackers_preview_": {
+    "message": "Are you sure you want to disable Trackers Preview?"
+  },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Weet u zeker dat u Ghostery niet wilt inschakelen?"
   },
   "audio_video_player": {
     "message": "Audio-/Videospeler",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "back": {
     "message": "Terug"
@@ -547,7 +550,7 @@
   },
   "cdn": {
     "message": "CDN",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
     "message": "Kijk op <a href=\"$${0}\" target=\"_blank\">FAQs</a> of stuur ons een bericht op <a href=\"mailto:$${1}\">$${2}</a>. <br/> We staan je graag te woord!"
@@ -629,7 +632,7 @@
   },
   "comments": {
     "message": "Opmerkingen",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "confirm_email_colon": {
     "message": "Bevestig E-mail:"
@@ -639,7 +642,7 @@
   },
   "consent_management": {
     "message": "Toestemmingsbeheer",
-    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+    "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "continue": {
     "message": "Ga door"
@@ -675,13 +678,16 @@
   },
   "customer_interaction": {
     "message": "Klanten Interactie",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "customize_setup": {
     "message": "Aangepaste Instelling"
   },
   "detailed_view": {
     "message": "Gedetailleerd Overzicht"
+  },
+  "disable": {
+    "message": "Disable"
   },
   "disable_trackers_preview": {
     "message": "Preview trackers uitschakelen"
@@ -700,7 +706,7 @@
   },
   "email": {
     "message": "E-mail",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "email_address_in_use": {
     "message": "Dat e-mailadres is al in gebruik. Gelieve een ander te kiezen. "
@@ -743,14 +749,14 @@
   },
   "essential": {
     "message": "Essentieel",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "expand_all": {
     "message": "Alles Ontvouwen"
   },
   "extensions": {
     "message": "Extensies",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "file_was_not_selected": {
     "message": "File niet geselecteerd"
@@ -797,6 +803,9 @@
   "ghostery_privacy_policy": {
     "message": "Privacybeleid van Ghostery"
   },
+  "ghostery_settings": {
+    "message": "Ghostery settings"
+  },
   "global_settings_saved": {
     "message": "Algemene Instellingen Opgeslagen"
   },
@@ -817,7 +826,7 @@
   },
   "hosting": {
     "message": "Hosting",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
     "message": "Ik ga akkoord met het versturen van niet-persoonlijke informatie naar <a href=\"$${0}\">Ghostery's WhoTracks.Me</a>, en ik accepteer het <a href=\"$${1}\">Ghostery Privacybeleid</a>."
@@ -876,9 +885,12 @@
   "license_url": {
     "message": "Url"
   },
+  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
+    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+  },
   "miscellaneous": {
     "message": "Diversen",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Meer informatie over $${0} methodologie in Ghostery's Manifesto."
@@ -913,6 +925,9 @@
   },
   "no_thanks_continue_with_basic": {
     "message": "Nee bedankt, doorgaan met Basic"
+  },
+  "no_trackers_detected": {
+    "message": "No trackers detected"
   },
   "none": {
     "description": "Used to say that this item does not belong to any of the groups, as in \"Groups: None\" (as opposed to \"Groups: Group A, Group B, Group C\").",
@@ -1613,7 +1628,7 @@
   },
   "site_analytics": {
     "message": "Website Analytics",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "skip": {
     "message": "Overslaan"
@@ -1623,7 +1638,7 @@
   },
   "social_media": {
     "message": "Sociale Media",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "spring_is_here": {
     "message": "Het is lente!"
@@ -1662,6 +1677,9 @@
   },
   "subscription_expired": {
     "message": "Account verlopen"
+  },
+  "subscription_for_contributors": {
+    "message": "Voor contributors"
   },
   "subscription_inactive": {
     "message": "Inactief"
@@ -1707,9 +1725,6 @@
   },
   "subscription_upgrade_to": {
     "message": "Word Contributor"
-  },
-  "subscription_for_contributors": {
-    "message": "Voor contributors"
   },
   "summary_alert": {
     "description": "as in '1 ALERT'",
@@ -1770,6 +1785,10 @@
   },
   "system_wide_tracker_and_ad_blocking": {
     "message": "Systeembrede blokkering van trackers en reclame"
+  },
+  "telemetry": {
+    "message": "Telemetrie",
+    "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "De Ghostery Browser Extensie is geïnstalleerd in uw browser maar Ghostery doet een klein dutje."
@@ -1845,7 +1864,7 @@
   },
   "unknown": {
     "message": "Onbekend",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "welcome_to_ghostery": {
     "message": "Welkom bij Ghostery"
@@ -1866,6 +1885,9 @@
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, beheerd door Ghostery, is een integraal onderdeel van Ghostery's AI anti-tracking technologie. Het is een uitgebreide wereldwijde bron over trackers, die voor transparantie zorgt in webtracking."
   },
+  "whotracks_me_statistical_report": {
+    "message": "WhoTracks.Me Statistical Report"
+  },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Met Ghostery ingeschakeld blader je meteen veiliger, sneller en met minder vervelende advertenties door het web."
   },
@@ -1883,6 +1905,9 @@
   },
   "you_re_all_set__ghosterian_": {
     "message": "U bent er klaar voor, Ghosterian!"
+  },
+  "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
+    "message": "You will no longer see tracker wheels next to the search results."
   },
   "your_email_do_not_match": {
     "message": "Je e-mailadressen komen niet overeen."
