--- a/extension-manifest-v2/_locales/pl/messages.json
+++ b/extension-manifest-v2/_locales/pl/messages.json
@@ -39,11 +39,11 @@
   },
   "adult_advertising": {
     "message": "Reklama dla dorosłych",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "advertising": {
     "message": "Reklama",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "alert_ad_block_off": {
     "message": "Blokowanie reklam WYŁĄCZONE. Reklamy nie będą blokowane."
@@ -147,12 +147,15 @@
   "are_you_sure_": {
     "message": "Jesteś pewny?"
   },
+  "are_you_sure_you_want_to_disable_trackers_preview_": {
+    "message": "Chcesz wyłączyć Podgląd trackerów?"
+  },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Na pewno chcesz pominąć aktywację Ghostery?"
   },
   "audio_video_player": {
     "message": "Odtwarzacz audio/wideo",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "back": {
     "message": "Wstecz"
@@ -547,7 +550,7 @@
   },
   "cdn": {
     "message": "CDN",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
     "message": "Sprawdź <a href=\"$${0}\" target=\"_blank\"> FAQ </a> lub napisz do nas na <a href=\"mailto:$${1}\"> $${2} </a>.  <br/>  Będziemy bardziej niż szczęśliwi, aby porozmawiać z tobą!"
@@ -629,7 +632,7 @@
   },
   "comments": {
     "message": "Komentarze",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "confirm_email_colon": {
     "message": "Potwierdź e-mail:"
@@ -639,7 +642,7 @@
   },
   "consent_management": {
     "message": "Zarządzanie zgodami",
-    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+    "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "continue": {
     "message": "Kontynuuj"
@@ -675,13 +678,16 @@
   },
   "customer_interaction": {
     "message": "Interakcja z klientem",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "customize_setup": {
     "message": "Dostosuj konfigurację"
   },
   "detailed_view": {
     "message": "Widok szczegółowy"
+  },
+  "disable": {
+    "message": "Wyłącz"
   },
   "disable_trackers_preview": {
     "message": "Wyłącz podgląd trackerów"
@@ -700,7 +706,7 @@
   },
   "email": {
     "message": "E-mail",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "email_address_in_use": {
     "message": "Ten adres e-mail jest już używany.  Wybierz inny adres. "
@@ -743,14 +749,14 @@
   },
   "essential": {
     "message": "Istotne",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "expand_all": {
     "message": "Rozwiń wszystko"
   },
   "extensions": {
     "message": "Rozszerzenia",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "file_was_not_selected": {
     "message": "Nie wybrano pliku"
@@ -797,6 +803,9 @@
   "ghostery_privacy_policy": {
     "message": "Polityka prywatności Ghostery"
   },
+  "ghostery_settings": {
+    "message": "Ustawienia Ghostery"
+  },
   "global_settings_saved": {
     "message": "Ustawienia globalne zapisane"
   },
@@ -817,7 +826,7 @@
   },
   "hosting": {
     "message": "Hosting",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
     "message": "Wyrażam zgodę na przesyłanie informacji nieosobowych do <a href=\"$${0}\">Ghostery WhoTracks.Me</a>, oraz akceptuję  <a href=\"$${1}\">Politykę Prywatności Ghostery</a> "
@@ -876,9 +885,12 @@
   "license_url": {
     "message": "Url"
   },
+  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
+    "message": "Należy pamiętać, że nie wszystkie wymienione podmioty są trackerami, czyli nie wszystkie gromadzą dane osobowe"
+  },
   "miscellaneous": {
     "message": "Różne",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Więcej informacji o metodologii $${0} w Manifeście Ghostery."
@@ -913,6 +925,9 @@
   },
   "no_thanks_continue_with_basic": {
     "message": "Nie, dziękuję. Kontynuuj z wersją podstawową"
+  },
+  "no_trackers_detected": {
+    "message": "Nie wykryto trackerów"
   },
   "none": {
     "description": "Used to say that this item does not belong to any of the groups, as in \"Groups: None\" (as opposed to \"Groups: Group A, Group B, Group C\").",
@@ -1613,7 +1628,7 @@
   },
   "site_analytics": {
     "message": "Analiza statystyk strony",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "skip": {
     "message": "Pomiń"
@@ -1623,7 +1638,7 @@
   },
   "social_media": {
     "message": "Media społecznościowe",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "spring_is_here": {
     "message": "Nadeszła wiosna!"
@@ -1662,6 +1677,9 @@
   },
   "subscription_expired": {
     "message": "Konto wygasło"
+  },
+  "subscription_for_contributors": {
+    "message": "Dla Kontrybutorów"
   },
   "subscription_inactive": {
     "message": "Nieaktywny"
@@ -1707,9 +1725,6 @@
   },
   "subscription_upgrade_to": {
     "message": "Zostań Kontrybutorem"
-  },
-  "subscription_for_contributors": {
-    "message": "Dla Kontrybutorów"
   },
   "summary_alert": {
     "description": "as in '1 ALERT'",
@@ -1770,6 +1785,10 @@
   },
   "system_wide_tracker_and_ad_blocking": {
     "message": "Blokowanie śledzenia i reklam w całym systemie"
+  },
+  "telemetry": {
+    "message": "Telemetria",
+    "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Wtyczka Ghostery Browser jest zainstalowana na twojej przeglądarce, ale Ghosty ucina sobie małą drzemkę."
@@ -1845,7 +1864,7 @@
   },
   "unknown": {
     "message": "Nieznany",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "welcome_to_ghostery": {
     "message": "Witamy w Ghostery"
@@ -1866,6 +1885,9 @@
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, obsługiwany przez Ghostery, jest integralną częścią technologii anty-śledzenia AI Ghostery. Jest to kompleksowy globalny zasób informacji o trackerach, wprowadzający przejrzystość do śledzenia w sieci."
   },
+  "whotracks_me_statistical_report": {
+    "message": "Raport statystyczny WhoTracks.Me"
+  },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Z włączonym Ghostery przeglądasz strony internetowe bezpieczniej, szybciej i z mniejszą ilością irytujących reklam."
   },
@@ -1883,6 +1905,9 @@
   },
   "you_re_all_set__ghosterian_": {
     "message": "Nie ma sprawy!"
+  },
+  "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
+    "message": "Wykresy kołowe z trackerami nie będą wyświetlane obok wyników wyszukiwania."
   },
   "your_email_do_not_match": {
     "message": "E-maile nie są identyczne."
