--- a/extension-manifest-v2/_locales/pt_BR/messages.json
+++ b/extension-manifest-v2/_locales/pt_BR/messages.json
@@ -39,11 +39,11 @@
   },
   "adult_advertising": {
     "message": "Anúncios adultos",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "advertising": {
     "message": "Anúncio",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "alert_ad_block_off": {
     "message": "O bloqueio de anúncios está DESATIVADO Os anúncios não serão bloqueados."
@@ -147,12 +147,15 @@
   "are_you_sure_": {
     "message": "Tem certeza?"
   },
+  "are_you_sure_you_want_to_disable_trackers_preview_": {
+    "message": "Tem certeza de que deseja desativar a visualização de rastreadores?"
+  },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Tem a certeza de que quer saltar a ativação do Ghostery?"
   },
   "audio_video_player": {
     "message": "Reprodutor de Áudio/Vídeo",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "back": {
     "message": "Voltar"
@@ -547,7 +550,7 @@
   },
   "cdn": {
     "message": "CDN",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
     "message": "Confira nossas <a href=\"$${0}\" target=\"_blank\">FAQsperguntas frequentes</a> ou escreva-nos: <a href=\"mailto:$${1}\">$${2}</a>. <br/> Teremos o maior prazer em falar com você!"
@@ -629,7 +632,7 @@
   },
   "comments": {
     "message": "Comentários",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "confirm_email_colon": {
     "message": "Confirmar email:"
@@ -639,7 +642,7 @@
   },
   "consent_management": {
     "message": "Gerenciamento de consentimento",
-    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+    "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "continue": {
     "message": "Continuar"
@@ -675,13 +678,16 @@
   },
   "customer_interaction": {
     "message": "Interação com o cliente",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "customize_setup": {
     "message": "Personalizar Configuração"
   },
   "detailed_view": {
     "message": "Visão detalhada"
+  },
+  "disable": {
+    "message": "Desativar"
   },
   "disable_trackers_preview": {
     "message": "Desativar a visualização de rastreadores"
@@ -700,7 +706,7 @@
   },
   "email": {
     "message": "Email",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "email_address_in_use": {
     "message": "Este email já está sendo usado.  Por favor, escolha outro. "
@@ -743,14 +749,14 @@
   },
   "essential": {
     "message": "Essencial",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "expand_all": {
     "message": "Expandir tudo"
   },
   "extensions": {
     "message": "Extensões",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "file_was_not_selected": {
     "message": "O arquivo não foi selecionado"
@@ -797,6 +803,9 @@
   "ghostery_privacy_policy": {
     "message": "Política de Privacidade do Ghostery"
   },
+  "ghostery_settings": {
+    "message": "Configurações do Ghostery"
+  },
   "global_settings_saved": {
     "message": "Configurações Globais Salvas"
   },
@@ -817,7 +826,7 @@
   },
   "hosting": {
     "message": "Hospedando",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
     "message": "Concordo em enviar informações não pessoais para o <a href=\"$${0}\">WhoTracks.Me do Ghostery</a> e aceito a <a href=\"$${1}\">Política de Privacidade do Ghostery</a>"
@@ -876,9 +885,12 @@
   "license_url": {
     "message": "Url"
   },
+  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
+    "message": "Lembre-se de que nem todas as entidades listadas são rastreadores. Ou seja, nem todas elas coletam dados pessoais."
+  },
   "miscellaneous": {
     "message": "Miscelânea",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Mais informações sobre a metodologia $${0} no Manifesto do Ghostery."
@@ -913,6 +925,9 @@
   },
   "no_thanks_continue_with_basic": {
     "message": "Não, obrigado. Continuar com o plano básico"
+  },
+  "no_trackers_detected": {
+    "message": "Nenhum rastreador detectado"
   },
   "none": {
     "description": "Used to say that this item does not belong to any of the groups, as in \"Groups: None\" (as opposed to \"Groups: Group A, Group B, Group C\").",
@@ -1613,7 +1628,7 @@
   },
   "site_analytics": {
     "message": "Analítica do site",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "skip": {
     "message": "Pular"
@@ -1623,7 +1638,7 @@
   },
   "social_media": {
     "message": "Mídia Social",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "spring_is_here": {
     "message": "A primavera chegou!"
@@ -1662,6 +1677,9 @@
   },
   "subscription_expired": {
     "message": "Conta expirada"
+  },
+  "subscription_for_contributors": {
+    "message": "Para colaboradores"
   },
   "subscription_inactive": {
     "message": "Inativo"
@@ -1707,9 +1725,6 @@
   },
   "subscription_upgrade_to": {
     "message": "Seja um colaborador"
-  },
-  "subscription_for_contributors": {
-    "message": "Para colaboradores"
   },
   "summary_alert": {
     "description": "as in '1 ALERT'",
@@ -1770,6 +1785,10 @@
   },
   "system_wide_tracker_and_ad_blocking": {
     "message": "Rastreio de todo o sistema e bloqueio de anúncios"
+  },
+  "telemetry": {
+    "message": "Telemetria",
+    "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "A extensão do navegador Ghostery está instalada no seu navegador, mas o Ghosty está tirando uma soneca leve."
@@ -1845,7 +1864,7 @@
   },
   "unknown": {
     "message": "Desconhecido",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "welcome_to_ghostery": {
     "message": "Bem-vindo ao Ghostery"
@@ -1866,6 +1885,9 @@
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "O WhoTracks.Me, operado pela Ghostery, é parte integrante da tecnologia antirastreamento de IA da Ghostery. É um recurso global abrangente sobre rastreadores que traz transparência ao rastreamento na web."
   },
+  "whotracks_me_statistical_report": {
+    "message": "Relatório estatístico do WhoTracks.Me"
+  },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "Com o Ghostery ativado, você navega instantaneamente na web de forma mais segura, mais rápida e com anúncios menos irritantes."
   },
@@ -1883,6 +1905,9 @@
   },
   "you_re_all_set__ghosterian_": {
     "message": "Está tudo pronto, fantasmagórico!"
+  },
+  "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
+    "message": "Você não verá mais rodas de rastreadores ao lado dos resultados de pesquisa."
   },
   "your_email_do_not_match": {
     "message": "Seus emails não conferem."
