--- a/extension-manifest-v2/_locales/zh_TW/messages.json
+++ b/extension-manifest-v2/_locales/zh_TW/messages.json
@@ -39,11 +39,11 @@
   },
   "adult_advertising": {
     "message": "成人廣告",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "advertising": {
     "message": "廣告",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "alert_ad_block_off": {
     "message": "停用廣告封鎖功能。廣告將不被封鎖。"
@@ -147,12 +147,15 @@
   "are_you_sure_": {
     "message": "Are you sure?"
   },
+  "are_you_sure_you_want_to_disable_trackers_preview_": {
+    "message": "你確定要停用「追蹤器預覽」嗎？"
+  },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "你確定要跳過啟用 Ghostery 嗎？"
   },
   "audio_video_player": {
     "message": "音訊/視訊播放器",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "back": {
     "message": "返回"
@@ -547,7 +550,7 @@
   },
   "cdn": {
     "message": "CDN",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
     "message": "查看<a href=\"$${0}\" target=\"_blank\">常見問題集</a>或寄電子郵件至 <a href=\"mailto:$${1}\">$${2}</a>。 <br/> 我們非常樂意與你聯絡！"
@@ -629,7 +632,7 @@
   },
   "comments": {
     "message": "評論",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "confirm_email_colon": {
     "message": "確認電郵："
@@ -639,7 +642,7 @@
   },
   "consent_management": {
     "message": "同意管理",
-    "description": "Includes trackers used for cookie consent management, allowing websites different levels of tracking user activity."
+    "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "continue": {
     "message": "繼續"
@@ -675,13 +678,16 @@
   },
   "customer_interaction": {
     "message": "客戶互動",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "customize_setup": {
     "message": "定制設置"
   },
   "detailed_view": {
     "message": "詳細圖示"
+  },
+  "disable": {
+    "message": "停用"
   },
   "disable_trackers_preview": {
     "message": "停用「追蹤器預覽」"
@@ -700,7 +706,7 @@
   },
   "email": {
     "message": "電郵",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "email_address_in_use": {
     "message": "該電子郵件地址已有人使用。請使用另一個。"
@@ -743,14 +749,14 @@
   },
   "essential": {
     "message": "基本內容",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "expand_all": {
     "message": "展開全部"
   },
   "extensions": {
     "message": "擴展",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "file_was_not_selected": {
     "message": "沒有選擇文檔"
@@ -797,6 +803,9 @@
   "ghostery_privacy_policy": {
     "message": "Ghostery 隱私權政策"
   },
+  "ghostery_settings": {
+    "message": "Ghostery 設定"
+  },
   "global_settings_saved": {
     "message": "全球設定已儲存"
   },
@@ -817,7 +826,7 @@
   },
   "hosting": {
     "message": "託管",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
     "message": "我同意將非個人資料傳送到 <a href=\"$${0}\">Ghostery 的 WhoTracks.Me</a>，而且我接受 <a href=\"$${1}\">Ghostery 隱私權政策< /a>"
@@ -876,9 +885,12 @@
   "license_url": {
     "message": "Url"
   },
+  "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
+    "message": "請注意，並非所有列出的實體都是追蹤器，並非所有實體都收集個人資料"
+  },
   "miscellaneous": {
     "message": "各種各樣的",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "更多有關 Ghostery 宣言中 $${0} 方法的資訊。"
@@ -913,6 +925,9 @@
   },
   "no_thanks_continue_with_basic": {
     "message": "不用了，謝謝，繼續使用基本功能"
+  },
+  "no_trackers_detected": {
+    "message": "未偵測到追蹤器"
   },
   "none": {
     "description": "Used to say that this item does not belong to any of the groups, as in \"Groups: None\" (as opposed to \"Groups: Group A, Group B, Group C\").",
@@ -1613,7 +1628,7 @@
   },
   "site_analytics": {
     "message": "網站分析",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "skip": {
     "message": "跳過"
@@ -1623,7 +1638,7 @@
   },
   "social_media": {
     "message": "社交媒體",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "spring_is_here": {
     "message": "春天到了！"
@@ -1662,6 +1677,9 @@
   },
   "subscription_expired": {
     "message": "帳戶已過期"
+  },
+  "subscription_for_contributors": {
+    "message": "For contributors"
   },
   "subscription_inactive": {
     "message": "不活躍"
@@ -1707,9 +1725,6 @@
   },
   "subscription_upgrade_to": {
     "message": "成為捐助者"
-  },
-  "subscription_for_contributors": {
-    "message": "For contributors"
   },
   "summary_alert": {
     "description": "as in '1 ALERT'",
@@ -1770,6 +1785,10 @@
   },
   "system_wide_tracker_and_ad_blocking": {
     "message": "全系統跟蹤器和廣告封鎖"
+  },
+  "telemetry": {
+    "message": "遙測",
+    "description": "Tracker category name"
   },
   "the_ghostery_browser_extension_is_installed_in_your_browser_but_ghosty_is_taking_a_light_nap_": {
     "message": "Ghostery 瀏覽器擴充功能已安裝在你的瀏覽器中，但 Ghosty 正在小睡片刻。"
@@ -1845,7 +1864,7 @@
   },
   "unknown": {
     "message": "不明的",
-    "description": "Ghostery organizes tags by category. This is one of several tag categories."
+    "description": "Tracker category name"
   },
   "welcome_to_ghostery": {
     "message": "歡迎來到 Ghostery"
@@ -1866,6 +1885,9 @@
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me 由 Ghostery 營運，是 Ghostery 人工智慧反追蹤技術不可或缺的一部分。 它是有關追蹤器的綜合性全球資源，使網路追蹤透明化。"
   },
+  "whotracks_me_statistical_report": {
+    "message": "WhoTracks.Me 統計報告"
+  },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "啟用 Ghostery 後，你即刻可以更安全、更快速地瀏覽網路，並減少惱人的廣告。"
   },
@@ -1883,6 +1905,9 @@
   },
   "you_re_all_set__ghosterian_": {
     "message": "一切準備就緒，Ghosterian！"
+  },
+  "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
+    "message": "你將不會再在搜尋結果旁邊看到追蹤器輪盤。"
   },
   "your_email_do_not_match": {
     "message": "您的這些電郵不脗合。"
